--- a/Spring Assignment/jpa_email_sending_project/src/main/resources/application.properties
+++ b/Spring Assignment/jpa_email_sending_project/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=jpa_email_sending_project
 
-spring.datasource.url = jdbc:mysql://localhost:3306/student_db_2
+spring.datasource.url = jdbc:mysql://localhost:3306/db_name
 spring.datasource.username=root
-spring.datasource.password=Temp@123456
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -13,8 +13,8 @@ logging.file.name=app.log
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dabhiashish1539@gmail.com
-spring.mail.password=txdr whim lpmq shuc
+spring.mail.username=yourMailId
+spring.mail.password=yourMailPassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
