--- a/Spring Assignment/jpa_repository_demo_app/src/main/resources/application.properties
+++ b/Spring Assignment/jpa_repository_demo_app/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=jpa_repository_demo_app
 
-spring.datasource.url = jdbc:mysql://localhost:3306/student_db_2
+spring.datasource.url = jdbc:mysql://localhost:3306/db_name
 spring.datasource.username=root
-spring.datasource.password=Temp@123456
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
