--- a/Spring Assignment/jpa-employee/src/main/resources/application.properties
+++ b/Spring Assignment/jpa-employee/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=jpa-employee
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
+spring.datasource.url=jdbc:mysql://localhost:3306/db_name
 spring.datasource.username=root
-spring.datasource.password=Temp@123456
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
