--- a/Spring Assignment/hibernate_demo_app/src/main/resources/application.properties
+++ b/Spring Assignment/hibernate_demo_app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=hibernate_demo_app
-spring.datasource.url=jdbc:mysql://localhost:3306/student_db_2
+spring.datasource.url=jdbc:mysql://localhost:3306/db_name
 spring.datasource.username=root
-spring.datasource.password=Temp@123456
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
