--- a/Spring Assignment/banking_system/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/Spring Assignment/banking_system/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,15 @@
     "name": "cloudinary.api-secret",
     "type": "java.lang.String",
     "description": "A description for 'cloudinary.api-secret'"
+  },
+  {
+    "name": "app.jwt-secret",
+    "type": "java.lang.String",
+    "description": "A description for 'app.jwt-secret'"
+  },
+  {
+    "name": "app.jwt-expiration-milliseconds",
+    "type": "java.lang.String",
+    "description": "A description for 'app.jwt-expiration-milliseconds'"
   }
 ]}
