--- a/Spring Assignment/spring_security_app/pom.xml
+++ b/Spring Assignment/spring_security_app/pom.xml
@@ -91,7 +91,11 @@
 			<version>0.12.5</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		    <version>3.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
