--- a/Spring Assignment/banking_system/pom.xml
+++ b/Spring Assignment/banking_system/pom.xml
@@ -112,6 +112,13 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 		</dependency>
+		
+		<!-- Cloudinary for image/document upload -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.34.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
