Add Spring Assignment changes

--- a/Spring Assignment/banking_system/pom.xml
+++ b/Spring Assignment/banking_system/pom.xml
@@ -119,8 +119,14 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.34.0</version>
 		</dependency>
+		
+		<!-- Spring Boot Mail Starter -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
