--- a/Angular/04-movie-app-signal-service/package.json
+++ b/Angular/04-movie-app-signal-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-reactive-form",
+  "name": "04-movie-app-signal-service",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -29,7 +29,6 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "bootstrap": "^5.3.8",
-    "date-fns": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
