--- a/Microservices/department-service/src/main/resources/application.properties
+++ b/Microservices/department-service/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+server.port=${PORT:8081}
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
