--- a/Microservices/employee-service/src/main/resources/application.properties
+++ b/Microservices/employee-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=${PORT:8080}
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
