--- a/Spring Assignment/spring_security_app/src/main/resources/application.properties
+++ b/Spring Assignment/spring_security_app/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.application.name=spring_security_app
+spring.application.name=auth-service
+
+server.port=8082
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/student_db_2
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 cloudinary.cloud-name=${CloudName}
